--- a/XYZReader/src/main/res/values/strings.xml
+++ b/XYZReader/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="action_settings">Settings</string>
     <string name="action_share">Share</string>
 
+    <string name="transition_name_article_detail_image">article_detail_image</string>
+
     <string name="up">Up</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="large_text">
