--- a/XYZReader/src/main/res/values/strings.xml
+++ b/XYZReader/src/main/res/values/strings.xml
@@ -7,7 +7,10 @@
     <string name="action_settings">Settings</string>
     <string name="action_share">Share</string>
 
+    <string name="share_text">I loved this book! Check it out: %1$s by %2$s</string>
+
     <string name="transition_name_article_detail_image">article_detail_image</string>
+    <string name="transition_name_article_detail_title">article_detail_title</string>
 
     <string name="up">Up</string>
     <string name="title_activity_main">MainActivity</string>
